fix: minor spacing changes to content container and added table container

--- a/src/containers/PageContainer/PageContainer.module.scss
+++ b/src/containers/PageContainer/PageContainer.module.scss
@@ -12,7 +12,13 @@
 	}
 
 	.Main {
-		margin-top: 16px;
+		// Mobile Breakpoints
+		margin-top: 8px;
+
+		// Rogue Breakpoint - Stats Widget Intro
+		@media only screen and (min-width: 569px) {
+			margin-top: 16px;
+		}
 
 		// Desktop Breakpoints
 		@media only screen and (min-width: 1264px) {
