--- a/src/pages/ZNS/ZNS.module.scss
+++ b/src/pages/ZNS/ZNS.module.scss
@@ -43,14 +43,12 @@
 	}
 }
 
-@media only screen and (max-width: 520px) {
-	.WidgetContainer {
-		margin: 8px 0;
-		&:first-child {
-			margin-top: 16px;
-		}
-		&:last-child {
-			margin-bottom: 0px;
-		}
+.TableContainer {
+	// Mobile Breakpoints
+	margin-top: 8px;
+
+	// Rogue Breakpoint - Stats Widget Intro
+	@media only screen and (min-width: 569px) {
+		margin-top: 16px;
 	}
 }
